Fix date input row taking up too much vertical space

--- a/src/index.css
+++ b/src/index.css
@@ -410,6 +410,7 @@ input[type="number"] {
 }
 .editEntryScene .date-input {
   display: flex;
+  flex-wrap: wrap;
 }
 .editEntryScene .date-input > * {
   width: auto;
